--- a/Responsive Web Design/Form Survey/index.html
+++ b/Responsive Web Design/Form Survey/index.html
@@ -12,57 +12,79 @@
     <form method="post">
         <div class="form-field">
             <label for="name-label">Name<input id="name-label" name="name-label" type="text"
-                    placeholder="Enter your name" required /><label>
+                    placeholder="Enter your name" required />
         </div>
         <div class="form-field">
             <label for="email-label">Email<input id="email-label" name="email-label" type="email"
                     placeholder="Enter your Email" pattern="[a-z0-5]{8,}" required />
+        </div>
+        <div class="form-field">
+            <label for="number">Age (optional)<input id="age-label" name="age-label" type="number" placeholder="Age"
+                    min="1" max="110" />
+        </div>
+        <div class="form-field">
+            <label for="role">Which option best describes your current role?
+                <select id="role " name="role">
+                    <option value="">Select current role</option>
+                    <option value="1">Student</option>
+                    <option value="2">Full Time Job</option>
+                    <option value="3">Full Time Learner</option>
+                    <option value="4">Prefer not to say</option>
+                    <option value="5">Other</option>
+                </select>
             </label>
         </div>
-        <label for="number">Age (optional)<input id="age-label" name="age-label" type="number"
-                placeholder="Enter your name" min="1" max="110" /> <label><label>
-                    <label for="role">Which option best describes your current role?
-                        <select id="role " name="role">
-                            <option value="">Select current role</option>
-                            <option value="1">Student</option>
-                            <option value="2">Full Time Job</option>
-                            <option value="3">Full Time Learner</option>
-                            <option value="4">Prefer not to say</option>
-                            <option value="5">Other</option>
-                        </select>
-                    </label>
-                    <fieldset>
-                        <legend>Would you recommend freeCodeCamp to a friend?</legend>
-                        <label for="definetly">Definetly<input id="definetly" type="radio" name="referrer" /> </label>
-                        <label for="maybe">Maybe<input id="maybe" type="radio" name="referrer" />
-                        </label>
-                        <label for="not-sure">Not Sure<input id="not-sure" type="radio" name="referrer" />
-                        </label>
-                    </fieldset>
-                    <label for="feature">What is your favorite feature of freeCodeCamp?
-                        <select id="feature" name="feature">
-                            <option value="">Select an option</option>
-                            <option value="1">Challenges</option>
-                            <option value="2">Projects</option>
-                            <option value="3">Community</option>
-                            <option value="4">Open Source</option>
-                        </select>
-                    </label>
-                    What would you like to see improved? (Check all that apply)
-                    <label for="improved"><input id="improved" type="checkbox" required name="improved" />Front-end
-                        Projects</label>
-                    <label for="improved"><input id="improved" type="checkbox" required name="improved" />Back-end
-                        Projects</label>
-                    <label for="improved"><input id="improved" type="checkbox" required name="improved" />Front-end
-                        Projects</label>
-                    <label for="improved"><input id="improved" type="checkbox" required name="improved" />Front-end
-                        Projects</label>
-                    <label for="improved"><input id="improved" type="checkbox" required name="improved" />Front-end
-                        Projects</label>
-                    <label>Any comments or suggestions?<textarea id="suggestions" name="suggestions" rows="3" cols="30"
-                            placeholder="Enter your comment here...">     </textarea>
-                    </label>
-                    <input type="submit" value="Submit" />
+        <div class="form-field">
+            <p>Would you recommend freeCodeCamp to a friend?</p>
+            <div class="col">
+            <label for="definetly">Definetly<input id="definetly" type="radio" name="referrer"
+                    value="definetly" /></label>
+            <label for="maybe">Maybe<input id="maybe" type="radio" name="referrer" value="maybe" /></label>
+            <label for="not-sure">Not Sure<input id="not-sure" type="radio" name="referrer" value="not-sure" /></label>
+        </div>
+        </div>
+        <div class="form-field">
+            <p>What is your favorite feature of freeCodeCamp?</p>
+            <label for="feature">
+                <select id="feature" name="feature">
+                    <option value="">Select an option</option>
+                    <option value="1">Challenges</option>
+                    <option value="2">Projects</option>
+                    <option value="3">Community</option>
+                    <option value="4">Open Source</option>
+                </select>
+            </label>
+        </div>
+        <div class="form-field col">
+            <div class="checks">
+           <p>What would you like to see improved? (Check all that apply)</p>
+            <label for="improved"><input id="front-end-proj" type="checkbox" required name="improved">Front-end
+                Projects</label>
+            <label for="improved"><input id="back-end-proj" type="checkbox" required name="improved">Back-end
+                Projects</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Data
+                Visualizaion</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Challenges</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Open Source
+                Community</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Gitter help
+                rooms</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Videos</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">City Meetups</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Wiki</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Forum</label>
+            <label for="improved"><input id="improved" type="checkbox" required name="improved">Additional
+                Courses</label>
+            </div>
+        </div>
+        <div class="form-field">
+            <label>Any comments or suggestions?<textarea id="suggestions" name="suggestions" rows="8" cols="30"
+                    placeholder="Enter your comment here...">     </textarea>
+            </label>
+        </div>
+        <div class="form-field">
+            <input type="submit" value="Submit" />
+        </div>
     </form>
 </body>
 
